[gd_scene load_steps=7 format=3 uid="uid://bww4tl6fwi7k"]

[ext_resource type="Texture2D" uid="uid://dvqci7k7lhnih" path="res://Assets/BetsUI/CartelUIApuesta_Sheet.png" id="1_5e4j8"]
[ext_resource type="Script" path="res://Scenes/Arena/BetHUD/BetHUD.gd" id="1_c5tys"]
[ext_resource type="PackedScene" uid="uid://if5mowox57bo" path="res://Scenes/Arena/BetHUD/PlayerBetCard.tscn" id="2_vnj2t"]
[ext_resource type="FontFile" uid="uid://cdnb1m88vsvb7" path="res://Assets/GrapeSoda.ttf" id="3_6whhi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8l753"]
atlas = ExtResource("1_5e4j8")
region = Rect2(440, 0, 220, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgs10"]
atlas = ExtResource("1_5e4j8")
region = Rect2(0, 236, 220, 120)

[node name="BetHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5tys")
playerCardScene = ExtResource("2_vnj2t")

[node name="BetDisplay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -118.0
offset_right = 110.0
grow_horizontal = 2
grow_vertical = 0

[node name="Fondo" type="TextureRect" parent="BetDisplay"]
custom_minimum_size = Vector2(220, 118)
layout_mode = 0
offset_right = 220.0
offset_bottom = 120.0
texture = SubResource("AtlasTexture_8l753")

[node name="Marco" type="TextureRect" parent="BetDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -117.0
offset_right = 110.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("AtlasTexture_pgs10")

[node name="BetName" type="Label" parent="BetDisplay"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6whhi")
theme_override_font_sizes/font_size = 40
text = "TIEMPO DE JUEGO"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LeftContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.889
anchor_bottom = 1.0
offset_top = -0.120056
offset_right = 819.0
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 2

[node name="RightContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.896
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -819.0
offset_top = -7.68005
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 30
